--- a/src/css/flavors/frappe.less
+++ b/src/css/flavors/frappe.less
@@ -2,6 +2,7 @@
 	--color: #c6d0f5;
 	--subtext0: #c6d0f5;
 	--accent: #ca9ee6;
+	--accent-hover: darken(#ca9ee6, 5%);
 	--border: #414559;
 	--base: #303446;
 	--mantle: #292c3c;
