--- a/src/css/flavors/latte.less
+++ b/src/css/flavors/latte.less
@@ -2,6 +2,7 @@
 	--color: #4c4f69;
 	--subtext0: #6c6f85;
 	--accent: #8839ef;
+	--accent-hover: darken(#8839ef, 5%);
 	--border: #ccd0da;
 	--base: #eff1f5;
 	--mantle: #e6e9ef;
