--- a/src/css/flavors/mocha.less
+++ b/src/css/flavors/mocha.less
@@ -2,6 +2,7 @@
 	--color: #cdd6f4;
 	--subtext0: #a6adc8;
 	--accent: #cba6f7;
+	--accent-hover: darken(#cba6f7, 5%);
 	--border: #313244;
 	--base: #1e1e2e;
 	--mantle: #181825;
